v1.1.5

Actually put CHisami where she's meant to be.
AdMarisa loses Agility for Swords Dance.
Magic Guard now properly blocks Doll Wall, Doll Skewer, and Aftermath.
Twin Spark no longer triple-triggers reaction abilities.

v1.1.4

CHisami now appears on Route 11, replacing some CSekibanki.
The mysterious creature is a bit less rude.
Route 2 now properly has all of its trees be Cut permanently, instead of just three of them.
Party menu when using a TM with mons that have status is more aesthetically pleasing, maybe.
Using Third Eye no longer retains the PP bonus of your first move.
Actually implement CShion's base stat changes.
Fixed a backsprite.

v1.1.3

Fix transparency on Chiyari's frontsprite.

v1.1.2

CShion's stats changed:
 40/60/35/80/80/75 -> 50/70/45/90/90/25
New sprites for Shion, Joon, Narumi, and Sannyo; a bunch of sprite tweaks as well (thanks BluShell).
TensokuG now has a distinct backsprite (thanks AutumnMood).
Hopefully actually fixed Ice Punch and ThunderPunch this time.
Junko now gets Belligerent instead of Pure Furies.
Pristine Shot and Exterminate now bypass the target's Ability if it would weaken or prevent the move.
Renamed Dam Breakage to Dam Breach (which it already was in the documentation).
Moved TM44 Rest and TM60 Endure (to the clerk with the status tms one tile over).
Addressed Ball Lightning's name being too long for the battle interface.
Fixed bug where physical fire moves wouldn't defrost the target.
Fixed No Guard interaction with semi-invulnerable moves.
Play Ghost no longer claims credit for avoiding super-effective attacks that simply missed.
Fixed some gen 3 quirks when enduring a move while already at 1 HP:
 -Contact/reaction abilities now actually trigger
 -Focus Punch will now be interrupted
 -Revenge's damage will now be doubled
(noted post-release: Victory Road is tweaked here, adding optional Rock Smash paths)

v1.1.1

Fix the fight codes.

v1.1.0
