@@ -580,7 +580,7 @@ const u8 sText_ChangedForm[] = _("{B_ATK_NAME_WITH_PREFIX} changed form!");
 const u8 sText_DisguiseBusted[] = _("{B_DEF_NAME_WITH_PREFIX}'s Disguise\nwas busted!");
 const u8 sText_TwinSparkActivates[] = _("{B_ATK_NAME_WITH_PREFIX}'s Twin Spark\nlets it attack again!");
 const u8 sText_BlankCardActivates[] = _("{B_SCR_ACTIVE_NAME_WITH_PREFIX}'s Blank Card\nturned into {B_BUFF1}!");
-const u8 sText_HailWhippedUp[] = _("{B_SCR_ACTIVE_NAME_WITH_PREFIX}'s {B_SCR_ACTIVE_ABILITY}\nwhipped up a sandstorm!");
+const u8 sText_HailWhippedUp[] = _("{B_SCR_ACTIVE_NAME_WITH_PREFIX}'s {B_SCR_ACTIVE_ABILITY}\nwhipped up a hailstorm!");
 const u8 sText_MyRealmSet[] = _("{B_SCR_ACTIVE_NAME_WITH_PREFIX}'s {B_SCR_ACTIVE_ABILITY}\ntwisted the dimensions!");
 const u8 sText_MyRealmUnset[] = _("{B_SCR_ACTIVE_NAME_WITH_PREFIX}'s {B_SCR_ACTIVE_ABILITY}\nuntwisted the dimensions!");
 const u8 sText_HarvestActivates[] = _("{B_ATK_NAME_WITH_PREFIX} Harvested\none {B_LAST_ITEM}!");
