@@ -3509,7 +3509,7 @@
       "itemId": "ITEM_SHELL_BELL",
       "price": 200,
       "holdEffect": "HOLD_EFFECT_SHELL_BELL",
-      "holdEffectParam": 8,
+      "holdEffectParam": 5,
       "description_english": "An item to be held by a Puppet.\\nThe holding Puppet regains some\\nHP upon striking the foe.",
       "importance": 0,
       "exitsBagOnUse": 0,
