@@ -3945,7 +3945,7 @@ const struct BaseStats gBaseStats[] =
         .growthRate = GROWTH_MEDIUM_FAST,
         .eggGroup1 = EGG_GROUP_HUMAN_LIKE,
         .eggGroup2 = EGG_GROUP_HUMAN_LIKE,
-        .abilities = { ABILITY_POISON_BODY, ABILITY_POISON_BODY },
+        .abilities = { ABILITY_POISON_BODY, ABILITY_MERCILESS },
         .hiddenAbility = ABILITY_DOLL_WALL,
         .safariZoneFleeRate = 0,
         .noFlip = TRUE,
@@ -3972,7 +3972,7 @@ const struct BaseStats gBaseStats[] =
         .growthRate = GROWTH_MEDIUM_FAST,
         .eggGroup1 = EGG_GROUP_HUMAN_LIKE,
         .eggGroup2 = EGG_GROUP_HUMAN_LIKE,
-        .abilities = { ABILITY_POISON_BODY, ABILITY_POISON_BODY },
+        .abilities = { ABILITY_POISON_BODY, ABILITY_MERCILESS },
         .hiddenAbility = ABILITY_DOLL_WALL,
         .safariZoneFleeRate = 0,
         .noFlip = TRUE,
@@ -3999,7 +3999,7 @@ const struct BaseStats gBaseStats[] =
         .growthRate = GROWTH_MEDIUM_FAST,
         .eggGroup1 = EGG_GROUP_HUMAN_LIKE,
         .eggGroup2 = EGG_GROUP_HUMAN_LIKE,
-        .abilities = { ABILITY_POISON_BODY, ABILITY_POISON_BODY },
+        .abilities = { ABILITY_POISON_BODY, ABILITY_MERCILESS },
         .hiddenAbility = ABILITY_TOXICOLOGIST,
         .safariZoneFleeRate = 0,
         .noFlip = TRUE,
@@ -4026,7 +4026,7 @@ const struct BaseStats gBaseStats[] =
         .growthRate = GROWTH_MEDIUM_FAST,
         .eggGroup1 = EGG_GROUP_HUMAN_LIKE,
         .eggGroup2 = EGG_GROUP_HUMAN_LIKE,
-        .abilities = { ABILITY_POISON_BODY, ABILITY_POISON_BODY },
+        .abilities = { ABILITY_POISON_BODY, ABILITY_MERCILESS },
         .hiddenAbility = ABILITY_DOLL_WALL,
         .safariZoneFleeRate = 0,
         .noFlip = TRUE,
@@ -4053,7 +4053,7 @@ const struct BaseStats gBaseStats[] =
         .growthRate = GROWTH_MEDIUM_FAST,
         .eggGroup1 = EGG_GROUP_HUMAN_LIKE,
         .eggGroup2 = EGG_GROUP_HUMAN_LIKE,
-        .abilities = { ABILITY_POISON_BODY, ABILITY_POISON_BODY },
+        .abilities = { ABILITY_POISON_BODY, ABILITY_MERCILESS },
         .hiddenAbility = ABILITY_CATALYST,
         .safariZoneFleeRate = 0,
         .noFlip = TRUE,
